complete read write openexr file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,25 @@ set(
 
 add_definitions(${NANOGUI_EXTRA_DEFS})
 
-add_executable(main src/main.cpp)
-target_compile_features(main PRIVATE cxx_std_17)
-target_include_directories(main PRIVATE ${MINPT_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/include")
-target_link_libraries(main PRIVATE tbb_static pugixml IlmImf nanogui ${NANOGUI_EXTRA_LIBS})
+set(
+  MINPT_HEADERS
+  include/minpt/common/common.h
+  include/minpt/core/bitmap.h
+  include/minpt/core/exception.h
+  include/minpt/math/color.h
+  include/minpt/math/math.h
+  include/minpt/math/vector.h
+)
+
+set(
+  MINPT_SRCS
+  src/core/bitmap.cpp
+)
+
+add_library(minpt STATIC ${MINPT_HEADERS} ${MINPT_SRCS})
+target_compile_features(minpt PUBLIC cxx_std_17)
+target_include_directories(minpt PUBLIC ${MINPT_INCLUDE_DIRS} "${CMAKE_CURRENT_SOURCE_DIR}/include")
+target_link_libraries(minpt PUBLIC tbb_static pugixml IlmImf nanogui ${NANOGUI_EXTRA_LIBS})
+
+add_executable(main src/main/main.cpp)
+target_link_libraries(main PRIVATE minpt)
