--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,11 @@ add_definitions(${NANOGUI_EXTRA_DEFS})
 set(
   MINPT_HEADERS
   include/minpt/common/common.h
+
+  include/minpt/core/ray.h
   include/minpt/core/bitmap.h
   include/minpt/core/exception.h
+
   include/minpt/math/math.h
   include/minpt/math/bounds.h
   include/minpt/math/color.h
