add indent method

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set(
   MINPT_SRCS
   src/core/bitmap.cpp
   src/core/mesh.cpp
+  src/common/common.cpp
 )
 
 add_library(minpt STATIC ${MINPT_HEADERS} ${MINPT_SRCS})
