complete parseTag function

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,7 @@ set(
   include/minpt/core/proplist.h
   include/minpt/core/object.h
   include/minpt/core/objectfactory.h
+  include/minpt/core/parser.h
   include/minpt/core/timer.h
   include/minpt/core/ray.h
   include/minpt/core/interaction.h
@@ -75,6 +76,7 @@ set(
   MINPT_SRCS
   src/utils/utils.cpp
   src/utils/bitmap.cpp
+  src/core/parser.cpp
   src/core/mesh.cpp
   src/core/scene.cpp
   src/core/objectfactory.cpp
