ao integrator support shadingSamples & rayLength configs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ add_executable(minpt
   src/accelerators/bvh.cpp
   src/cameras/perspective.cpp
   src/integrators/ao.cpp
+  src/integrators/path.cpp
   src/integrators/normals.cpp
 )
 
