--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,6 +96,7 @@ set(MINPT_HEADERS
 
   include/minpt/lights/point.h
   include/minpt/lights/area.h
+  include/minpt/lights/constant.h
 
   include/minpt/meshes/obj.h
 
